@@ -2098,6 +2098,483 @@ expr_stmt|;
 block|}
 annotation|@
 name|Test
+DECL|method|testIncreaseRequestWithNoHeadroomLeft ()
+specifier|public
+name|void
+name|testIncreaseRequestWithNoHeadroomLeft
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+comment|/**      * Application has two containers running, try to increase one of them, the      * requested amount exceeds user's headroom for the queue.      */
+name|MockRM
+name|rm1
+init|=
+operator|new
+name|MockRM
+argument_list|()
+block|{
+annotation|@
+name|Override
+specifier|public
+name|RMNodeLabelsManager
+name|createNodeLabelManager
+parameter_list|()
+block|{
+return|return
+name|mgr
+return|;
+block|}
+block|}
+decl_stmt|;
+name|rm1
+operator|.
+name|start
+argument_list|()
+expr_stmt|;
+name|MockNM
+name|nm1
+init|=
+name|rm1
+operator|.
+name|registerNode
+argument_list|(
+literal|"h1:1234"
+argument_list|,
+literal|8
+operator|*
+name|GB
+argument_list|)
+decl_stmt|;
+comment|// app1 -> a1
+name|RMApp
+name|app1
+init|=
+name|rm1
+operator|.
+name|submitApp
+argument_list|(
+literal|1
+operator|*
+name|GB
+argument_list|,
+literal|"app"
+argument_list|,
+literal|"user"
+argument_list|,
+literal|null
+argument_list|,
+literal|"default"
+argument_list|)
+decl_stmt|;
+name|MockAM
+name|am1
+init|=
+name|MockRM
+operator|.
+name|launchAndRegisterAM
+argument_list|(
+name|app1
+argument_list|,
+name|rm1
+argument_list|,
+name|nm1
+argument_list|)
+decl_stmt|;
+name|FiCaSchedulerApp
+name|app
+init|=
+name|getFiCaSchedulerApp
+argument_list|(
+name|rm1
+argument_list|,
+name|app1
+operator|.
+name|getApplicationId
+argument_list|()
+argument_list|)
+decl_stmt|;
+comment|// Allocate 1 container
+name|am1
+operator|.
+name|allocate
+argument_list|(
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+name|ResourceRequest
+operator|.
+name|newInstance
+argument_list|(
+name|Priority
+operator|.
+name|newInstance
+argument_list|(
+literal|1
+argument_list|)
+argument_list|,
+literal|"*"
+argument_list|,
+name|Resources
+operator|.
+name|createResource
+argument_list|(
+literal|2
+operator|*
+name|GB
+argument_list|)
+argument_list|,
+literal|1
+argument_list|)
+argument_list|)
+argument_list|,
+literal|null
+argument_list|)
+expr_stmt|;
+name|ContainerId
+name|containerId2
+init|=
+name|ContainerId
+operator|.
+name|newContainerId
+argument_list|(
+name|am1
+operator|.
+name|getApplicationAttemptId
+argument_list|()
+argument_list|,
+literal|2
+argument_list|)
+decl_stmt|;
+name|Assert
+operator|.
+name|assertTrue
+argument_list|(
+name|rm1
+operator|.
+name|waitForState
+argument_list|(
+name|nm1
+argument_list|,
+name|containerId2
+argument_list|,
+name|RMContainerState
+operator|.
+name|ALLOCATED
+argument_list|,
+literal|10
+operator|*
+literal|1000
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|// Acquire them, and NM report RUNNING
+name|am1
+operator|.
+name|allocate
+argument_list|(
+literal|null
+argument_list|,
+literal|null
+argument_list|)
+expr_stmt|;
+name|sentRMContainerLaunched
+argument_list|(
+name|rm1
+argument_list|,
+name|containerId2
+argument_list|)
+expr_stmt|;
+comment|// am1 asks to change container2 from 2GB to 8GB, which will exceed user
+comment|// limit
+name|am1
+operator|.
+name|sendContainerResizingRequest
+argument_list|(
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+name|ContainerResourceChangeRequest
+operator|.
+name|newInstance
+argument_list|(
+name|containerId2
+argument_list|,
+name|Resources
+operator|.
+name|createResource
+argument_list|(
+literal|8
+operator|*
+name|GB
+argument_list|)
+argument_list|)
+argument_list|)
+argument_list|,
+literal|null
+argument_list|)
+expr_stmt|;
+name|checkPendingResource
+argument_list|(
+name|rm1
+argument_list|,
+literal|"default"
+argument_list|,
+literal|6
+operator|*
+name|GB
+argument_list|,
+literal|null
+argument_list|)
+expr_stmt|;
+name|Assert
+operator|.
+name|assertEquals
+argument_list|(
+literal|6
+operator|*
+name|GB
+argument_list|,
+name|app
+operator|.
+name|getAppAttemptResourceUsage
+argument_list|()
+operator|.
+name|getPending
+argument_list|()
+operator|.
+name|getMemory
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// NM1 do 1 heartbeats
+name|CapacityScheduler
+name|cs
+init|=
+operator|(
+name|CapacityScheduler
+operator|)
+name|rm1
+operator|.
+name|getResourceScheduler
+argument_list|()
+decl_stmt|;
+name|RMNode
+name|rmNode1
+init|=
+name|rm1
+operator|.
+name|getRMContext
+argument_list|()
+operator|.
+name|getRMNodes
+argument_list|()
+operator|.
+name|get
+argument_list|(
+name|nm1
+operator|.
+name|getNodeId
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|cs
+operator|.
+name|handle
+argument_list|(
+operator|new
+name|NodeUpdateSchedulerEvent
+argument_list|(
+name|rmNode1
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|RMContainer
+name|rmContainer1
+init|=
+name|app
+operator|.
+name|getLiveContainersMap
+argument_list|()
+operator|.
+name|get
+argument_list|(
+name|containerId2
+argument_list|)
+decl_stmt|;
+comment|/* Check reservation statuses */
+comment|// Increase request should *NOT* be reserved as it exceeds user limit
+name|Assert
+operator|.
+name|assertFalse
+argument_list|(
+name|rmContainer1
+operator|.
+name|hasIncreaseReservation
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|Assert
+operator|.
+name|assertTrue
+argument_list|(
+name|app
+operator|.
+name|getReservedContainers
+argument_list|()
+operator|.
+name|isEmpty
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|Assert
+operator|.
+name|assertNull
+argument_list|(
+name|cs
+operator|.
+name|getNode
+argument_list|(
+name|nm1
+operator|.
+name|getNodeId
+argument_list|()
+argument_list|)
+operator|.
+name|getReservedContainer
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// Pending resource will not be changed since it's not satisfied
+name|checkPendingResource
+argument_list|(
+name|rm1
+argument_list|,
+literal|"default"
+argument_list|,
+literal|6
+operator|*
+name|GB
+argument_list|,
+literal|null
+argument_list|)
+expr_stmt|;
+name|Assert
+operator|.
+name|assertEquals
+argument_list|(
+literal|6
+operator|*
+name|GB
+argument_list|,
+name|app
+operator|.
+name|getAppAttemptResourceUsage
+argument_list|()
+operator|.
+name|getPending
+argument_list|()
+operator|.
+name|getMemory
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// Queue/user/application's usage will *NOT* be updated
+name|checkUsedResource
+argument_list|(
+name|rm1
+argument_list|,
+literal|"default"
+argument_list|,
+literal|3
+operator|*
+name|GB
+argument_list|,
+literal|null
+argument_list|)
+expr_stmt|;
+name|Assert
+operator|.
+name|assertEquals
+argument_list|(
+literal|3
+operator|*
+name|GB
+argument_list|,
+operator|(
+operator|(
+name|LeafQueue
+operator|)
+name|cs
+operator|.
+name|getQueue
+argument_list|(
+literal|"default"
+argument_list|)
+operator|)
+operator|.
+name|getUser
+argument_list|(
+literal|"user"
+argument_list|)
+operator|.
+name|getUsed
+argument_list|()
+operator|.
+name|getMemory
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|Assert
+operator|.
+name|assertEquals
+argument_list|(
+literal|3
+operator|*
+name|GB
+argument_list|,
+name|app
+operator|.
+name|getAppAttemptResourceUsage
+argument_list|()
+operator|.
+name|getUsed
+argument_list|()
+operator|.
+name|getMemory
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|Assert
+operator|.
+name|assertEquals
+argument_list|(
+literal|0
+operator|*
+name|GB
+argument_list|,
+name|app
+operator|.
+name|getAppAttemptResourceUsage
+argument_list|()
+operator|.
+name|getReserved
+argument_list|()
+operator|.
+name|getMemory
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|rm1
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+annotation|@
+name|Test
 DECL|method|testExcessiveReservationWhenCancelIncreaseRequest ()
 specifier|public
 name|void
